--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>AirPlan</display-name>
+    <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
  <filter>
  <filter-name>UserFilter</filter-name>
  <filter-class>Service.UserFilter</filter-class>
@@ -9,4 +12,12 @@
  <filter-name>UserFilter</filter-name>
  <url-pattern>/reg.user</url-pattern>
  </filter-mapping>
+ <servlet>
+ <servlet-name>user</servlet-name>
+ <servlet-class>Service.UserReg</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ <servlet-name>user</servlet-name>
+ <url-pattern>*.user</url-pattern>
+ </servlet-mapping>
 </web-app>
