--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>AirPlan</display-name>
-    <welcome-file-list>
+  <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-    <error-page>
+  </welcome-file-list>
+  <error-page>
     <error-code>404</error-code>
     <location>/ERROR/error404.html</location>
-    </error-page>
-    <error-page>
+  </error-page>
+  <error-page>
     <error-code>450</error-code>
     <location>/ERROR/error450.html</location>
-    </error-page>
-    <error-page>
+  </error-page>
+  <error-page>
     <error-code>500</error-code>
     <location>/ERROR/error500.html</location>
-    </error-page>
- <filter>
- <filter-name>UserFilter</filter-name>
- <filter-class>Filter.UserFilter</filter-class>
- </filter>
- <filter-mapping>
- <filter-name>UserFilter</filter-name>
- <url-pattern>/reg.user</url-pattern>
- </filter-mapping>
- <servlet>
- <servlet-name>user</servlet-name>
- <servlet-class>Service.UserReg</servlet-class>
- </servlet>
- <servlet-mapping>
- <servlet-name>user</servlet-name>
- <url-pattern>*.user</url-pattern>
- </servlet-mapping>
+  </error-page>
+  <filter>
+    <filter-name>UserFilter</filter-name>
+    <filter-class>Filter.UserFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UserFilter</filter-name>
+    <url-pattern>/reg.user</url-pattern>
+  </filter-mapping>
+  <filter>
+  <filter-name>allfilter</filter-name>
+  <filter-class>Filter.AllFilter</filter-class>
+  <init-param>
+  <param-name>acessable</param-name>
+  <param-value></param-value>
+  </init-param>
+  </filter>
+  <filter-mapping>
+  <filter-name>allfilter</filter-name>
+  <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>user</servlet-name>
+    <servlet-class>Service.UserReg</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>user</servlet-name>
+    <url-pattern>*.user</url-pattern>
+  </servlet-mapping>
 </web-app>
